<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MisakaGate</string>
    <string name="umeng_channel" translatable="false">mahoucoder</string>
    <string name="one_season_in_total">One season in total</string>
    <string name="subtitle_group">"Subtitle Group: "</string>
    <string name="resolution">"Resolution: "</string>
    <string name="year">"Year/Season: "</string>
    <string name="language">"Language: "</string>
    <string name="some_year">Some year</string>
    <string name="retry">"Retry"</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="loading_res_list">"Fetching video list"</string>
    <string name="loading">"Loading"</string>
    <string name="loading_res_list_failed">"Failed to load video list"</string>
    <string name="anime_cover_description">Anime cover</string>
    <string name="middle_dot">" · "</string>
    <string name="choose_resolution">Choose a resolution</string>
    <string name="request_permission">"The following permissions are required to get you started. "</string>
    <string name="phone">Phone</string>
    <string name="storage">Storage</string>
    <string name="issue_explanation">Phone: used for issue reporting. \nStorage: used for storing video files.</string>
    <string name="allow_permissions">Allow permissions</string>
    <string name="permission_request_result_thanks">"Completed! Preparing for first launch. "</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="unreachable">Cannot reach 2D-Gate \nat the moment.</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search anime names</string>
    <string name="settings">Settings</string>
    <string name="anime_list">Anime List</string>
    <string name="favorites">Favorites</string>
    <string name="text_music">Music</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="refresh">Refresh</string>
    <string name="anime_subscription_hint">No subscribed animes. \nSubscribe one to view it here.</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="days_ago">" days ago"</string>
    <string name="today">&#60; 1 day ago</string>
    <string name="some_day">Some day</string>
    <string name="general">General</string>
    <string name="new_version_found">New version found</string>
    <string name="new_version_message">"A new version is found: "</string>
    <string name="new_version_another_message">", your version is "</string>
    <string name="new_version_yet_another_message">". Would you like to download? "</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="checking_for_updates">Checking for updates</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="please_wait">"Please wait… "</string>
    <string name="latest_build">"This is already the latest build. "</string>
    <string name="is_updated">" is updated"</string>
    <string name="anime_update_text">" has been updated just now. Click to check it out! "</string>
    <string name="debug">DEBUG</string>
    <string name="check_for_new_episodes">Check for new episodes</string>
    <string name="broken_link">Unable to play this episode. </string>
</resources>
